--- a/src/index.css
+++ b/src/index.css
@@ -36,14 +36,17 @@ body {
   font-family: "Poppins", sans-serif;
   padding: 20px;
 }
-.item {
-  margin-bottom: 12px;
+.layout {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
-.item.red {
-  color: red;
-}
-h2 {
-  font-weight: bold;
-  font-size: 18px;
-  margin-bottom: 12px;
+.layout button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 24px;
+  border: 1px solid #eee;
+  border-radius: 12px;
 }
